# winsos-poc

./: CMakeLists.txt  LICENSE  README.md
include/: fs.h  net.h  winsos.h
src/: fs.cpp  main.cpp  net.cpp  winsos.cpp
